--- a/07chapter/.env.example
+++ b/07chapter/.env.example
@@ -16,20 +16,22 @@ LLM_MODEL_ID="gpt-5-nano"
 LLM_API_KEY=your-api-key-here
 
 # 服务地址
-LLM_BASE_URL="https://api.openai.com/v1"
+LLM_BASE_URL=""
 
 # 超时时间（可选，默认60秒）
 LLM_TIMEOUT=60
+
+MODELSCOPE_API_KEY = your-MODELSCOPE-api-key-here
 
 # ============================================================================
 # 🛠️ 工具配置（可选）
 # ============================================================================
 
 # Tavily搜索（推荐）- 获取API密钥：https://tavily.com/
-# TAVILY_API_KEY=tvly-your_tavily_key_here
+TAVILY_API_KEY=tvly-your_tavily_key_here
 
 # SerpApi搜索（备选）- 获取API密钥：https://serpapi.com/
-# SERPAPI_API_KEY=your_serpapi_key_here
+SERPAPI_API_KEY=your_serpapi_key_here
 
 # ================================
 # Qdrant 向量数据库配置 - 获取API密钥：https://cloud.qdrant.io/
